--- a/views/partials/_scripts.ejs
+++ b/views/partials/_scripts.ejs
@@ -15,6 +15,7 @@
 <script src=" https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 <!-- <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script> -->
 <script src="https://cdn.datatables.net/1.10.19/js/dataTables.jqueryui.min.js "></script>
+<script src="app/js/jQuery.table2excel.js"></script>
 
 <!-- Puser:js -->
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
