--- a/views/pages/allbots.ejs
+++ b/views/pages/allbots.ejs
@@ -87,6 +87,17 @@
                                         case 7:
                                             imgUrl = 'assets/images/action_images/action_required_bot.png'
                                             break;
+                                        case 8:
+                                            imgUrl = 'assets/images/action_images/action_required_bot.png'
+                                            break;
+
+                                        case 9:
+                                            imgUrl = 'assets/images/action_images/action_required_bot.png'
+                                            break;
+
+                                        case 10:
+                                            imgUrl = 'assets/images/action_images/action_required_bot.png'
+                                            break;
                                         default:
                                             break;
                                     }
