--- a/views/pages/notifications.ejs
+++ b/views/pages/notifications.ejs
@@ -108,6 +108,18 @@
                                             imgUrl = 'assets/images/action_images/TypeError.png';
                                             issueDetail = obj.message;
                                             break;
+                                        case 8:
+                                            imgUrl = 'assets/images/action_images/SentryBlockError.png';
+                                            issueDetail = obj.message;
+                                            break;
+                                        case 9:
+                                            imgUrl = 'assets/images/action_images/ParseError.png';
+                                            issueDetail = obj.message;
+                                            break;
+                                        case 10:
+                                            imgUrl = 'assets/images/action_images/TypeError.png';
+                                            issueDetail = obj.message;
+                                            break;
                                     }
                                 %>
 
