--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -102,7 +102,6 @@
                                         </div>
                                     </div>
                                 </div>
-
                                 
                                 <div class="form-group d-flex justify-content-left">
                                     <div class="form-check form-check-flat mt-0">
@@ -117,7 +116,7 @@
                                 </div>
                                 <div class="text-block text-center my-3">
                                     <span class="text-small font-weight-semibold">Already have and account ?</span>
-                                    <a href="/" class="text-black text-small">Login</a>
+                                    <a href="/login" class="text-black text-small">Login</a>
                                 </div>
                             </form>
                         </div>
