updated home front end

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -17,8 +17,6 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#banner">Home</a></li>
                 <li><a href="#service">Service</a></li>
-                <li><a href="#portfolio">Price</a></li>
-                <li><a href="#about">Our Team</a></li>
                 <li><a href="#contact">Contact Us</a></li>
             </ul>
             </div>
@@ -32,9 +30,11 @@
         <div class="container">
         <div class="row">
             <div class="jumbotron">
-            <h1 class="small">Welcome To <span class="bold">Metamedias</span></h1>
-            <p class="big">Instagram Direct Message Service system.</p>
-            <a href="/login" class="btn btn-banner">Get start<i class="fa fa-send"></i></a>
+                <h1 style="color: white;">
+                    Instagram business growth system & sales automation platform that drives nearly unlimited traffic to products and services without paying for ads
+                </h1>
+                <p class="big">Instagram Direct Message Service system.</p>
+                <a href="/login" class="btn btn-banner">Get start<i class="fa fa-send"></i></a>
             </div>
         </div>
         </div>
@@ -43,12 +43,6 @@
 
     <!--CTA1 START-->
     <div class="cta-1">
-        <!-- <div class="container">
-            <div class="row text-center white">
-                <h1 class="cta-title">Say Hey to Metamedias!!</h1>
-                <p class="cta-sub-title">Very smart, reliable and comfortable service.</p>
-            </div>
-        </div> -->
     </div>
     <!--CTA1 END-->
 
@@ -58,7 +52,11 @@
         <div class="row">
             <div class="page-title text-center">
             <h1>Our Service</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <br>incididunt ut labore et dolore magna aliqua. </p>
+            <p style="font-size: 16px;">The way it works is it plugs into your companies Instagram account <br>
+                and proactively reaches out to targeted customers opening, <br>
+                and closing sales using direct messages only. (Chatbot) that follows up for you, <br> 
+                you provide it scripts and it will execute those scripts to qualify <br>
+                and lead prospects ultimately to purchase.</p>
             <hr class="pg-titl-bdr-btm"></hr>
             </div>
             <div class="col-md-4">
@@ -91,245 +89,12 @@
         </div>
         </div>
     </div>
-    <!--SERVICE END-->
-    <div id="portfolio">
-        <div class="container">
-        <div class="page-title text-center">
-            <h1>Our Privious Works</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <br>incididunt ut labore et dolore magna aliqua. </p>
-            <hr class="pg-titl-bdr-btm"></hr>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-            <ul id="portfolio-flters">
-                <li data-filter=".filter-app, .filter-card, .filter-logo, .filter-web" class="filter-active">All</li>
-                <li data-filter=".filter-app">App</li>
-                <li data-filter=".filter-card">Card</li>
-                <li data-filter=".filter-logo">Logo</li>
-                <li data-filter=".filter-web">Web</li>
-            </ul>
-            </div>
-        </div>
-
-        <div class="row" id="portfolio-wrapper">
-            <div class="col-lg-3 col-md-6 portfolio-item filter-app">
-            <a href="">
-                <img src="assets/images/home/portfolio/app1.jpg" alt="">
-                <div class="details">
-                <h4>App 1</h4>
-                <span>Alored dono par</span>
-                </div>
-            </a>
-            </div>
-
-            <div class="col-lg-3 col-md-6 portfolio-item filter-web">
-            <a href="">
-                <img src="assets/images/home/portfolio/web2.jpg" alt="">
-                <div class="details">
-                <h4>Web 2</h4>
-                <span>Alored dono par</span>
-                </div>
-            </a>
-            </div>
-
-            <div class="col-lg-3 col-md-6 portfolio-item filter-app">
-            <a href="">
-                <img src="assets/images/home/portfolio/app3.jpg" alt="">
-                <div class="details">
-                <h4>App 3</h4>
-                <span>Alored dono par</span>
-                </div>
-            </a>
-            </div>
-
-            <div class="col-lg-3 col-md-6 portfolio-item filter-card">
-            <a href="">
-                <img src="assets/images/home/portfolio/card1.jpg" alt="">
-                <div class="details">
-                <h4>Card 1</h4>
-                <span>Alored dono par</span>
-                </div>
-            </a>
-            </div>
-
-            <div class="col-lg-3 col-md-6 portfolio-item filter-card">
-            <a href="">
-                <img src="assets/images/home/portfolio/card2.jpg" alt="">
-                <div class="details">
-                <h4>Card 2</h4>
-                <span>Alored dono par</span>
-                </div>
-            </a>
-            </div>
-
-            <div class="col-lg-3 col-md-6 portfolio-item filter-web">
-            <a href="">
-                <img src="assets/images/home/portfolio/web3.jpg" alt="">
-                <div class="details">
-                <h4>Web 3</h4>
-                <span>Alored dono par</span>
-                </div>
-            </a>
-            </div>
-
-            <div class="col-lg-3 col-md-6 portfolio-item filter-card">
-            <a href="">
-                <img src="assets/images/home/portfolio/card3.jpg" alt="">
-                <div class="details">
-                <h4>Card 3</h4>
-                <span>Alored dono par</span>
-                </div>
-            </a>
-            </div>
-
-            <div class="col-lg-3 col-md-6 portfolio-item filter-app">
-            <a href="">
-                <img src="assets/images/home/portfolio/app2.jpg" alt="">
-                <div class="details">
-                <h4>App 2</h4>
-                <span>Alored dono par</span>
-                </div>
-            </a>
-            </div>
-
-            <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-            <a href="">
-                <img src="assets/images/home/portfolio/logo1.jpg" alt="">
-                <div class="details">
-                <h4>Logo 1</h4>
-                <span>Alored dono par</span>
-                </div>
-            </a>
-            </div>
-
-            <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-            <a href="">
-                <img src="assets/images/home/portfolio/logo3.jpg" alt="">
-                <div class="details">
-                <h4>Logo 3</h4>
-                <span>Alored dono par</span>
-                </div>
-            </a>
-            </div>
-
-            <div class="col-lg-3 col-md-6 portfolio-item filter-web">
-            <a href="">
-                <img src="assets/images/home/portfolio/web1.jpg" alt="">
-                <div class="details">
-                <h4>Web 1</h4>
-                <span>Alored dono par</span>
-                </div>
-            </a>
-            </div>
-
-            <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-            <a href="">
-                <img src="assets/images/home/portfolio/logo2.jpg" alt="">
-                <div class="details">
-                <h4>Logo 2</h4>
-                <span>Alored dono par</span>
-                </div>
-            </a>
-            </div>
-        </div>
-        </div>
-    </div>
-
-    <!--TEAM START-->
-    <div id="about" class="section-padding">
-        <div class="container">
-        <div class="row">
-            <div class="page-title text-center">
-            <h1>Meet Our Team</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <br>incididunt ut labore et dolore magna aliqua. </p>
-            <hr class="pg-titl-bdr-btm"></hr>
-            </div>
-            <div class="autoplay">
-            <div class="col-md-6">
-                <div class="team-info">
-                <div class="img-sec">
-                    <img src="assets/images/home/agent1.jpg" class="img-responsive">
-                </div>
-                <div class="fig-caption">
-                    <h3>Haris Brown</h3>
-                    <p class="marb-20">Sr. UI Designer</p>
-                    <p>Follow me:</p>
-                    <ul class="team-social">
-                    <li class="bgblue-dark"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="bgred"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li class="bgblue-light"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="bgblue-dark"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-                </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="team-info">
-                <div class="img-sec">
-                    <img src="assets/images/home/agent2.jpg" class="img-responsive">
-                </div>
-                <div class="fig-caption">
-                    <h3>Emmy Brown</h3>
-                    <p class="marb-20">Jr. UI Designer</p>
-                    <p>Follow me:</p>
-                    <ul class="team-social">
-                    <li class="blue-dark"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="red"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li class="blue-light"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="blue-dark"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-                </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="team-info">
-                <div class="img-sec">
-                    <img src="assets/images/home/agent3.jpg" class="img-responsive">
-                </div>
-                <div class="fig-caption">
-                    <h3>Iain Dante</h3>
-                    <p class="marb-20">Jr. UI Designer</p>
-                    <p>Follow me:</p>
-                    <ul class="team-social">
-                    <li class="blue-dark"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="red"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li class="blue-light"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="blue-dark"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-                </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="team-info">
-                <div class="img-sec">
-                    <img src="assets/images/home/agent4.jpg" class="img-responsive">
-                </div>
-                <div class="fig-caption">
-                    <h3>Kate Haris</h3>
-                    <p class="marb-20">Jr. UI Designer</p>
-                    <p>Follow me:</p>
-                    <ul class="team-social">
-                    <li class="blue-dark"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="red"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li class="blue-light"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="blue-dark"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-                </div>
-                </div>
-            </div>
-            </div>
-        </div>
-        </div>
-    </div>
-    <!--TEAM END-->
 
     <!--CTA2 START-->
     <div class="cta2">
         <div class="container">
         <div class="row white text-center">
             <h3 class="wd75 fnt-24">“The social media marketing is depending on your hand.” - Sean Riese</h3>
-            <!-- <p class="cta-sub-title"></p> -->
-            <!-- <a href="#" class="btn btn-lg">Request A Quote</a> -->
         </div>
         </div>
     </div>
@@ -341,7 +106,7 @@
         <div class="row">
             <div class="page-title text-center">
             <h1>Quick Contact</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <br>incididunt ut labore et dolore magna aliqua. </p>
+            <p>Please leave your message if you have a question or interested for our service, <br> we are welcome to your contacting using this platform "CONTACT US" page </p>
             <hr class="pg-titl-bdr-btm"></hr>
             </div>
             <div id="sendmessage">Your message has been sent. Thank you!</div>
@@ -427,12 +192,6 @@
             <div class="footer_copyright">
             <p> © Copyright, All Rights Reserved.</p>
             <div class="credits">
-                
-                <!-- All the links in the footer should remain intact.
-                You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Tempo -->
-               
                 Created by <a href="https://metamedias.co">Metamedias.co</a>
             </div>
             </div>
